[package]
authors.workspace = true
description = "Duniter-v2s xtask"
edition.workspace = true
license.workspace = true
name = "xtask"
repository.workspace = true
version = "0.1.0"

[[bin]]
bench = false
path = "src/main.rs"
name = "xtask"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codec = { workspace = true, features = ["derive", "full", "bit-vec"] }
frame-metadata = { workspace = true }
graphql_client = { workspace = true }
hex = { workspace = true }
memmap2 = { workspace = true }
placeholder = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
scale-info = { workspace = true, features = ["bit-vec"] }
scale-value = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tera = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
version_check = { workspace = true }
weight-analyzer = { workspace = true }

[features]
std = []
