[package]
authors = ['tuxmain <tuxmain@zettascript.org>']
description = 'Duniter client distance'
edition = '2021'
homepage = 'https://duniter.org'
license = 'AGPL-3.0'
name = 'dc-distance'
readme = 'README.md'
repository = 'https://git.duniter.org/nodes/rust/duniter-v2s'
version = '1.0.0'

[dependencies]

log = "0.4"

pallet-distance = { path = "../../pallets/distance" }

# substrate
scale-info = { version = "2.1.1", features = ["derive"] }
sp-distance = { path = "../../primitives/distance" }
thiserror = "1.0.30"

[dependencies.codec]
features = ['derive']
package = 'parity-scale-codec'
version = '3.1.5'

[dependencies.frame-support]
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.sc-client-api]
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.sp-core]
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.sp-keystore]
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'
### DOC ###

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.sp-runtime]
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'
