[package]
edition.workspace = true
homepage.workspace = true
license.workspace = true
description = "Duniter client distance"
name = "dc-distance"
readme = "README.md"
version = "1.0.0"
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
std = [
	"frame-support/std",
	"pallet-distance/std",
	"sp-core/std",
	"sp-distance/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"pallet-distance/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-distance/try-runtime",
	"sp-distance/try-runtime",
	"sp-runtime/try-runtime",
]

[dependencies]
frame-support = { workspace = true }
log = { workspace = true }
pallet-distance = { workspace = true }
sc-client-api = { workspace = true }
sp-core = { workspace = true }
sp-distance = { workspace = true }
sp-runtime = { workspace = true }
thiserror = { workspace = true }
