[package]
authors = ['librelois <c@elo.tf>']
description = 'duniter pallet authority members.'
edition = "2021"
homepage = 'https://duniter.org'
license = 'AGPL-3.0'
name = 'pallet-authority-members'
readme = 'README.md'
repository = 'https://git.duniter.org/nodes/rust/duniter-v2s'
version = '3.0.0'

[features]
default = ['std']
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'log/std',
    'pallet-session/std',
    'pallet-offences/std',
    'serde',
    'sp-core/std',
    'sp-membership/std',
    'sp-runtime/std',
    'sp-staking/std',
    'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']

[dependencies]
# local
pallet-offences = { path = "../offences", default-features = false }
sp-membership = { path = "../../primitives/membership", default-features = false }

# crates.io
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = "3.1.5"

# substrate
[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/duniter/substrate'
optional = true
branch = 'duniter-substrate-v0.9.42'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dependencies.pallet-session]
default-features = false
features = ["historical"]
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dependencies.serde]
version = "1.0.101"
optional = true
features = ["derive"]

[dependencies.sp-core]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dependencies.sp-staking]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'

### DOC ###

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

### DEV ###

[dev-dependencies.maplit]
version = '1.0.2'

[dev-dependencies.serde]
version = '1.0.119'

[dev-dependencies.sp-io]
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.42'
