[package]
authors = ['librelois <c@elo.tf>']
description = 'duniter pallet authority members.'
edition = "2021"
homepage = 'https://duniter.org'
license = 'AGPL-3.0'
name = 'pallet-authority-members'
readme = 'README.md'
repository = 'https://git.duniter.org/nodes/rust/duniter-v2s'
version = '3.0.0'

[features]
default = ['std']
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking?/std',
    'pallet-session/std',
    'pallet-offences/std',
    'serde/std',
    'scale-info/std',
    'sp-core/std',
    'sp-runtime/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-io/std',
    'sp-state-machine/std',
    'log/std',
]
try-runtime = [
    'frame-support/try-runtime',
    'frame-system/try-runtime',
    'sp-runtime/try-runtime',
    'pallet-session/try-runtime',
    'pallet-offences/try-runtime',
]

[dependencies]

# crates.io
log = { version = "0.4.20", default-features = false }
# local
pallet-offences = { path = "../offences", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = "3.6.9"

# substrate
[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
optional = true
branch = 'duniter-substrate-v1.6.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.pallet-session]
default-features = false
features = ["historical"]
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.serde]
optional = true
default-features = false
version = "1.0.195"
features = ["derive"]

[dependencies.sp-core]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.sp-staking]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.sp-std]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dev-dependencies.maplit]
default-features = false
version = '1.0.2'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dev-dependencies.sp-state-machine]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'
