[package]
authors.workspace = true
description = "duniter pallet authority members"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pallet-authority-members"
repository.workspace = true
version.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-offences/std",
	"pallet-session/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-state-machine/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-session/try-runtime",
	"sp-runtime/try-runtime",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
pallet-offences = { workspace = true }
pallet-session = { workspace = true, features = ["historical"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-state-machine = { workspace = true }
