[package]
authors = ['librelois <c@elo.tf>']
description = 'duniter pallet certification.'
edition = "2021"
homepage = 'https://duniter.org'
license = 'AGPL-3.0'
name = 'pallet-certification'
readme = 'README.md'
repository = 'https://git.duniter.org/nodes/rust/duniter-v2s'
version = '3.0.0'

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking/runtime-benchmarks',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking?/std',
    'scale-info/std',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-io/std',
]
try-runtime = [
    'frame-support/try-runtime',
    'frame-system/try-runtime',
    'sp-runtime/try-runtime',
]

[dependencies]
duniter-primitives = { path = "../../primitives/duniter", default-features = false }

# substrate
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = "3.6.9"

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
optional = true
branch = 'duniter-substrate-v1.6.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.maplit]
default-features = false
version = '1.0.2'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'
### DOC ###

[package.metadata.docs.rs]
default-features = false
targets = ['x86_64-unknown-linux-gnu']

[dependencies.sp-std]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'
