[package]
authors.workspace = true
description = "duniter pallet distance"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pallet-distance"
repository.workspace = true
version.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-authority-members/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"getrandom/std",
	"pallet-authority-members/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-identity/std",
	"pallet-session/std",
	"scale-info/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-distance/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-members/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-session/try-runtime",
	"sp-distance/try-runtime",
	"sp-runtime/try-runtime",
]

[package.metadata.docs.rs]
default-features = false
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
pallet-authority-members = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-identity = { workspace = true }
pallet-session = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-consensus-babe = { workspace = true }
sp-core = { workspace = true }
sp-distance = { workspace = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-keystore = { workspace = true }
