[package]
authors = ['librelois <c@elo.tf>']
description = 'duniter pallet for account management'
edition = "2021"
homepage = 'https://duniter.org'
license = 'AGPL-3.0'
name = 'pallet-duniter-account'
readme = 'README.md'
repository = 'https://git.duniter.org/nodes/rust/duniter-v2s'
version = '3.0.0'

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking/runtime-benchmarks',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
    'pallet-identity/runtime-benchmarks',
    'pallet-treasury/runtime-benchmarks',
    'pallet-quota/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking?/std',
    'pallet-balances/std',
    'pallet-transaction-payment/std',
    'pallet-identity/std',
    'pallet-treasury/std',
    'pallet-quota/std',
    'serde/std',
    'log/std',
    'scale-info/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
]
try-runtime = [
    'frame-support/try-runtime',
    'frame-system/try-runtime',
    'sp-runtime/try-runtime',
    'pallet-identity/try-runtime',
    'pallet-treasury/try-runtime',
    'pallet-quota/try-runtime',
    'pallet-balances/try-runtime',
    'pallet-transaction-payment/try-runtime',
]

[dependencies]
# local
pallet-quota = { path = "../quota", default-features = false }
pallet-identity = { path = "../identity", default-features = false }

# crates.io
codec = { package = 'parity-scale-codec', version = "3.6.9", default-features = false, features = ["derive"] }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

# substrate
[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
optional = true
branch = 'duniter-substrate-v1.6.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.pallet-treasury]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.serde]
default-features = false
version = "1.0.195"
features = ["derive"]

[dependencies.sp-core]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

### DOC ###

[package.metadata.docs.rs]
default-features = false
targets = ['x86_64-unknown-linux-gnu']

### DEV ###

[dev-dependencies.maplit]
default-features = false
version = '1.0.2'
