[package]
authors.workspace = true
description = "duniter pallet for account management"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pallet-duniter-account"
readme = "README.md"
repository.workspace = true
version.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-quota/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances/std",
	"pallet-identity/std",
	"pallet-quota/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-quota/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"sp-runtime/try-runtime",
]

[package.metadata.docs.rs]
default-features = false
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# local
pallet-quota = { workspace = true }
pallet-identity = { workspace = true }
codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
pallet-balances = { workspace = true }
pallet-treasury = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
pallet-transaction-payment = { workspace = true }
