[package]
authors = ['librelois <c@elo.tf>']
description = 'Duniter test parameters.'
edition = "2021"
homepage = 'https://substrate.dev'
license = 'AGPL-3.0'
name = 'pallet-duniter-test-parameters'
repository = 'https://git.duniter.org/nodes/rust/duniter-v2s'
version = '3.0.0'

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'serde',
    "sp-io/std",
    "sp-std/std",
]
try-runtime = ['frame-support/try-runtime']

[dependencies]
pallet-duniter-test-parameters-macro = { path = "macro" }
serde = { version = "1.0.101", features = ["derive"], optional = true }

# substrate
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = "3.1.5"

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/duniter/substrate'
optional = true
branch = 'duniter-substrate-v0.9.26'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.26'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.26'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.26'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.26'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/duniter/substrate'
branch = 'duniter-substrate-v0.9.26'

### DOC ###

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
