[package]
authors = ['librelois <c@elo.tf>']
description = 'Duniter test parameters.'
edition = "2021"
homepage = 'https://duniter.org'
license = 'AGPL-3.0'
name = 'pallet-duniter-test-parameters'
repository = 'https://git.duniter.org/nodes/rust/duniter-v2s'
version = '3.0.0'

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking/runtime-benchmarks',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'scale-info/std',
    'serde/std',
    'codec/std',
    'frame-benchmarking?/std',
    'frame-support/std',
    'frame-system/std',
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
try-runtime = [
    'frame-support/try-runtime',
    'frame-system/try-runtime',
    'sp-runtime/try-runtime',
]

[dependencies]
pallet-duniter-test-parameters-macro = { path = "macro", default-features = false }

# substrate
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"], default-features = false }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = "3.6.9"

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
optional = true
branch = 'duniter-substrate-v1.6.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'
### DOC ###

[package.metadata.docs.rs]
default-features = false
targets = ['x86_64-unknown-linux-gnu']

[dependencies.sp-io]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/duniter/duniter-polkadot-sdk'
branch = 'duniter-substrate-v1.6.0'
